# vista-sdk

./: CMakeLists.txt  README.md
.github/workflows/: ____build-cpp.yml____  build-cpp.yml
cpp/: CMakeLists.txt  README.md
cpp/benchmark/: CMakeLists.txt  CodebooksLookup.cpp  GmodLoad.cpp  GmodLookup.cpp  GmodTraversal.cpp  README.md  ShortStringHash.cpp  pch.h
cpp/cmake/: CMakeLists.txt  CompilersSettings.cmake  Dependencies.cmake  Sources.cmake
cpp/doc/: CMakeLists.txt
cpp/include/dnv/vista/sdk/: ChdDictionary.h  ChdDictionary.hpp  ChdDictionary.inl  Codebook.h  CodebookName.h  CodebookName.inl  Codebooks.h  Codebooks.inl  CodebooksDto.h  EmbeddedResource.h  Gmod.h  Gmod.inl  GmodDto.h  GmodNode.h  GmodPath.h  GmodTraversal.h  GmodVersioning.h  GmodVersioningDto.h  ILocalId.h  ILocalIdBuilder.h  ILocalIdBuilder.hpp  ISO19848Dtos.h  IUniversalId.h  IUniversalIdBuilder.h  ImoNumber.inl  LocalId.h  LocalId.inl  LocalIdBuilder.h  LocalIdItems.h  LocalIdParsingErrorBuilder.h  LocalIdParsingErrorBuilder.inl  LocationBuilder.inl  LocationParsingErrorBuilder.h  Locations.h  Locations.inl  LocationsDto.h  MetadataTag.h  MetadataTag.inl  ParsingErrors.h  UniversalId.h  (+4 more)
cpp/licenses/: README.md
cpp/src/dnv/vista/sdk/: ChdDictionary.cpp  Codebook.cpp  CodebookName.cpp  Codebooks.cpp  CodebooksDto.cpp  EmbeddedResource.cpp  Gmod.cpp  GmodDto.cpp  GmodNode.cpp  GmodPath.cpp  GmodTraversal.cpp  GmodVersioning.cpp  GmodVersioningDto.cpp  ILocalIdBuilder.cpp  ISO19848Dtos.cpp  ImoNumber.cpp  LocalId.cpp  LocalIdBuilder.cpp  LocalIdItems.cpp  LocalIdParsingErrorBuilder.cpp  LocationParsingErrorBuilder.cpp  Locations.cpp  LocationsDto.cpp  MetadataTag.cpp  ParsingErrors.cpp  UniversalId.cpp  UniversalIdBuilder.cpp  VIS.cpp  VisVersion.cpp  pch.h
cpp/test/: CMakeLists.txt  Codebook.cpp  CodebookTests.cpp  CodebooksTests.cpp  Codebooks_test.cpp  Gmod.cpp  GmodPath.cpp  GmodPathTests.cpp  GmodTests.cpp  GmodVersioning.cpp  GmodVersioningTests.cpp  ISOString.cpp  ImoNumber.cpp  ImoNumberTests.cpp  LocalId.cpp  LocalIdTests.cpp  Locations.cpp  LocationsTests.cpp  TestData.h  TestDataLoader.cpp  TestDataLoader.h  UniversalId.cpp  pch.h
cpp/test_catch2/: CMakeLists.txt  pch.h
cpp/test_gtest/: CMakeLists.txt  Codebooks_gtest.cpp  Gmod_gtest.cpp
csharp/src/Vista.SDK/: Vista.SDK.csproj
csharp/src/Vista.SDK.System.Text.Json/: Vista.SDK.System.Text.Json.csproj
csharp/test/Vista.SDK.Tests/: GmodTests.cs
resources/gmod-vis-3-7a.json/: gmod-vis-3-7a.json
